{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 15,
  "lineage": "6328e898-367c-968f-97ab-e1222e594a19",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:route-table/rtb-076083d4f7437faf2",
            "id": "rtb-076083d4f7437faf2",
            "owner_id": "905418110630",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Description": "Private route table 1",
              "Name": "private1-rt"
            },
            "tags_all": {
              "Description": "Private route table 1",
              "Name": "private1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f63a86e30ecbc24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:route-table/rtb-0e72e57995c0ce317",
            "id": "rtb-0e72e57995c0ce317",
            "owner_id": "905418110630",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Description": "Private route table 2",
              "Name": "private2-rt"
            },
            "tags_all": {
              "Description": "Private route table 2",
              "Name": "private2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f63a86e30ecbc24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:route-table/rtb-0118aa3c2238b41ad",
            "id": "rtb-0118aa3c2238b41ad",
            "owner_id": "905418110630",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Description": "Public route table",
              "Name": "public-rt"
            },
            "tags_all": {
              "Description": "Public route table",
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f63a86e30ecbc24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_foreach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:security-group/sg-0f56303a106ba2841",
            "description": "Security group for app",
            "egress": [],
            "id": "sg-0f56303a106ba2841",
            "ingress": [],
            "name": "app-sg-foreach",
            "name_prefix": "",
            "owner_id": "905418110630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg-foreach"
            },
            "tags_all": {
              "Name": "app-sg-foreach"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f63a86e30ecbc24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:security-group/sg-0003707ed252d82b4",
            "description": "Security group for db",
            "egress": [],
            "id": "sg-0003707ed252d82b4",
            "ingress": [],
            "name": "db-sg-foreach",
            "name_prefix": "",
            "owner_id": "905418110630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg-foreach"
            },
            "tags_all": {
              "Name": "db-sg-foreach"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f63a86e30ecbc24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:security-group/sg-0c6d5bd32c6b8fe45",
            "description": "Security group for web",
            "egress": [],
            "id": "sg-0c6d5bd32c6b8fe45",
            "ingress": [],
            "name": "web-sg-foreach",
            "name_prefix": "",
            "owner_id": "905418110630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-foreach"
            },
            "tags_all": {
              "Name": "web-sg-foreach"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f63a86e30ecbc24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_foreach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3186183932",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f56303a106ba2841",
            "security_group_rule_id": "sgr-021a0dfc5525a3117",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_foreach",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3962847980",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0003707ed252d82b4",
            "security_group_rule_id": "sgr-0768a38acf41875d4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_foreach",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-569152598",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c6d5bd32c6b8fe45",
            "security_group_rule_id": "sgr-0846876143ed0f697",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_foreach",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_foreach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:subnet/subnet-0fea4467d28a93436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fea4467d28a93436",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418110630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "subnet-private1",
              "Tier": "private"
            },
            "vpc_id": "vpc-07f63a86e30ecbc24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:subnet/subnet-0d757a048396c2b40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d757a048396c2b40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418110630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private2",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "subnet-private2",
              "Tier": "private"
            },
            "vpc_id": "vpc-07f63a86e30ecbc24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:subnet/subnet-07e5ae908a0ef3da5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e5ae908a0ef3da5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418110630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "subnet-public",
              "Tier": "public"
            },
            "vpc_id": "vpc-07f63a86e30ecbc24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:vpc/vpc-07f63a86e30ecbc24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd8f02fa44a958d1",
            "default_route_table_id": "rtb-07719fb335b5ef21d",
            "default_security_group_id": "sg-02d0df5905f9cc9cf",
            "dhcp_options_id": "dopt-037feaf54470d39c9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f63a86e30ecbc24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07719fb335b5ef21d",
            "owner_id": "905418110630",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}